# ffi-talk

./: LICENSE  utils_example.code-workspace
.github/workflows/: main.yml
math_example/: pubspec.yaml
math_example/mathlib/: .gitignore  CMakeLists.txt  math.c  math.def  math.h
sqlite/: README.md
sqlite/lib/src/database/: database.dart
sqlite_example/: sqlite.code-workspace  veggieseasons.code-workspace
sqlite_example/sqlite/: .gitignore  ffigen.yaml  pubspec.yaml
sqlite_example/sqlite/lib/: sqlite.dart
sqlite_example/veggieseasons/: README.md  pubspec.yaml
sqlite_example/veggieseasons/lib/: main.dart
sqlite_example/veggieseasons/lib/data/: db_veggie_provider.dart  preferences.dart  veggie.dart
sqlite_example/veggieseasons/lib/screens/: details.dart  favorites.dart  home.dart
sqlite_example/veggieseasons/lib/widgets/: close_button.dart  settings_group.dart  settings_item.dart  veggie_headline.dart
sqlite_example/veggieseasons/macos/Runner/: DebugProfile.entitlements
sqlite_example/veggieseasons/tool/: populate_database.dart  read_database.dart
utils_example/: LICENSE  README.md  pubspec.yaml
utils_example/utilslib/: CMakeLists.txt  math.def  strings.c  strings.def  utils.h
veggies_sqlite_example/sqlite3/: README.md
veggies_sqlite_example/veggies_in_season_app/: README.md
veggieseasons/lib/: styles.dart
veggieseasons/lib/data/: app_state.dart  local_veggie_provider.dart
veggieseasons/lib/screens/: search.dart  settings.dart
veggieseasons/lib/widgets/: veggie_card.dart
(+1 files in other folders)
